--- a/client/src/App.css
+++ b/client/src/App.css
@@ -400,6 +400,11 @@ table th {
 	transition: opacity 1000ms ease-in;
 }
 
+.nav-wrapper {
+	padding-left: 3em;
+	padding-right: 3em;
+}
+
 #not-found {
 	max-width: 400px;
 	max-height: 400px;
@@ -412,6 +417,10 @@ table th {
 #edit-ride-modal,
 #delete-ride-modal {
 	max-width: 600px;
+}
+
+.swap-routes {
+	margin-top: 30px;
 }
 
 .swap-routes:hover {
