minor visual fixes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -401,8 +401,8 @@ table th {
 }
 
 .nav-wrapper {
-	padding-left: 3em;
-	padding-right: 3em;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 #not-found {
